#166272345 Users should like and unlike Articles (#36)
* feat-[166272346]: Users follow each other
create a follow endpoint
verify the endpoint to allow only valid users
write the follow functionality
make sure users cannot follow themselves
make sure a user cannot follow another user multiple times
update the routes to be version compliant
