# swagger.yaml
@@ -533,28 +533,55 @@ paths:
           description: "Article does not exist"
       security:
       - api_key: []
-    get:
+  /articles/{slug}/like:
+    post:
       tags:
       - "articles"
-      summary: "Get ratings"
-      description: "Get all article ratings"
-      operationId: "getArticleRatings"
+      summary: "Like Article"
+      description: "Likes an article"
+      operationId: "likeArticle"
       produces:
       - "application/json"
       parameters:
       - name: "slug"
         in: "path"
-        description: "Slug of the article to be get ratings"
+        description: "Slug of the article to be liked"
+        required: true
+        type: "string"
+        format: "slug"
+      responses:
+        201:
+          description: "Article successfully liked"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        404:
+          description: "Article does not exist"
+      security:
+      - api_key: []
+    delete:
+      tags:
+      - "articles"
+      summary: "Unlike Article"
+      description: "Unlikes an article"
+      operationId: "UnlikeArticle"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "slug"
+        in: "path"
+        description: "Slug of the article to be unliked"
         required: true
         type: "string"
         format: "slug"
       responses:
         200:
-          description: "success"
+          description: "Article successfully unliked"
           schema:
             $ref: "#/definitions/ApiResponse"
-        400:
-          description: "fail"
+        404:
+          description: "Article does not exist"
+      security:
+      - api_key: []
   /articles/{slug}/comments:
     post:
       tags:
@@ -626,7 +653,7 @@ paths:
       parameters:
       - name: "slug"
         in: "path"
-        description: "Slug of the article to update comment"
+        description: "Id of the article to update comment"
         required: true
         type: "string"
         format: "text"
@@ -683,71 +710,6 @@ paths:
           description: "Bad Request"
         404:
           description: "Article does not exist"
-      security:
-      - api_key: []
-  /articles/{slug}/comments/{id}/like:
-    post:
-      tags:
-      - "articles"
-      summary: "Like Comment"
-      description: "Likes a comment"
-      operationId: "likeComment"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "slug"
-        in: "path"
-        description: "Slug of the article with the comment"
-        required: true
-        type: "string"
-        format: "text"
-      - name: "id"
-        in: "path"
-        description: "Id of the comment to be liked"
-        required: true
-        type: "integer"
-        format: "int64"
-      responses:
-        200:
-          description: "Comment liked successfully."
-          schema:
-            $ref: "#/definitions/ApiResponse"
-        400:
-          description: "Bad Request"
-        404:
-          description: "Comment does not exist"
-      security:
-      - api_key: []
-    delete:
-      tags:
-      - "articles"
-      summary: "Unlike Comment"
-      description: "Unlikes a comment"
-      operationId: "unlikeComment"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "slug"
-        in: "path"
-        description: "Slug of the article to unlike comment"
-        required: true
-        type: "string"
-        format: "text"
-      - name: "id"
-        in: "path"
-        description: "Id of the comment to be unliked"
-        required: true
-        type: "integer"
-        format: "int64"
-      responses:
-        200:
-          description: "Comment unliked successfully."
-          schema:
-            $ref: "#/definitions/ApiResponse"
-        400:
-          description: "Bad Request"
-        404:
-          description: "Comment does not exist"
       security:
       - api_key: []
 securityDefinitions:
@@ -868,3 +830,4 @@ definitions:
 externalDocs:
   description: "Find out more about Author's Haven"
   url: "https://github.com/andela/kingsmen-ah-backend"
+  
